[package]
name = "RustKraken"
version = "0.1.0"
authors = ["heiss, bee"]
edition = "2018"
license = "mit"
description = "fast stegcracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
structopt = "0.2.15"
rayon = "1.4.0"
ansi_term = "0.12.1"
